--- a/hi.html
+++ b/hi.html
@@ -1,8 +1,20 @@
 <!DOCTYPE html>
 <html>
+<head>
 <title>hello</title>
+<style>
+h2{
+
+color:red;
+
+
+}
+</style>
+
+</head>
 <body>
-hi 
+<h2>hi </h2>
+
 </body>
 
 </html>
